[gd_scene load_steps=4 format=3 uid="uid://bsgbm2lcwsj3a"]

[ext_resource type="Script" uid="uid://dsko2aa8akmtg" path="res://scenes/enemy/enemy.gd" id="1_2g3c4"]
[ext_resource type="Texture2D" uid="uid://bw5wd5xdw7lol" path="res://resources/sprites/Minion.png" id="1_sotd4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_c35qx"]
radius = 30.0

[node name="Enemy" type="Node2D"]
script = ExtResource("1_2g3c4")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(8, 0)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_sotd4")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_c35qx")

[node name="VisibleChecker" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(10, -1)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_exited" from="VisibleChecker" to="." method="_on_visible_checker_screen_exited"]
